--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1982,10 +1982,8 @@
     font-size: 10.5px;
     line-height: 1.15;
     margin-bottom: 3px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    overflow: visible;
+    display: block;
     font-weight: 700;
     color: #2f1f17;
     letter-spacing: -0.01em;
@@ -1996,10 +1994,8 @@
     font-size: 9.2px;
     line-height: 1.25;
     margin-top: 2px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    overflow: visible;
+    display: block;
     opacity: 0.8;
   }
 
@@ -2076,10 +2072,8 @@
     font-size: 10.5px;
     line-height: 1.15;
     margin-bottom: 3px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    overflow: visible;
+    display: block;
     font-weight: 700;
     color: #2f1f17;
     letter-spacing: -0.01em;
@@ -2090,10 +2084,8 @@
     font-size: 9.2px;
     line-height: 1.25;
     margin-top: 2px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    overflow: visible;
+    display: block;
     opacity: 0.8;
   }
 
